Fix heading of tables in dark mode.

--- a/src/main/webapp/css/jenkins-style.css
+++ b/src/main/webapp/css/jenkins-style.css
@@ -1,8 +1,11 @@
-/* ------------------------------------------------------------------------------------------------------------------- */
-/* DataTables Material Design                                                                                          */
-/* ------------------------------------------------------------------------------------------------------------------- */
+th.sorting, th.no-sort {
+    color: var(--text-color);
+    background: var(--table-background);
+}
 
-tfoot {
+table.dataTable tfoot td {
+    color: var(--text-color);
+    background: var(--table-background);
     font-weight: bold;
 }
 
